--- a/front/users.html
+++ b/front/users.html
@@ -5,14 +5,22 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>Document</title>
+    <title>Users</title>
+    <link rel="stylesheet" type="text/css" href="users.css">
     <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.11.0/jquery.min.js" type="text/javascript"></script>
     <script src="users.js"></script>
 </head>
 
 <body>
-    <div id="demo">
-        <h1>The XMLHttpRequest Object</h1>
-        <button type="button" onclick="loadDoc()">Change Content</button>
+    <div id="users">
+    </div>
+    <div>
+        <form action="#" id="createUserForm" onsubmit="createUser(); return false">
+            <label for="name">Name : </label>
+            <input type="text" id="name" name="name" value="Louis" required>
+            <label for="email">Email : </label>
+            <input type="text" id="email" name="email" value="louis.fontaine@efrei.net" required>
+            <input class="button" type="submit" value="Create" required>
+          </form>
     </div>
 </body>
