--- a/front/userTasks.html
+++ b/front/userTasks.html
@@ -7,11 +7,13 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>User Tasks</title>
     <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.11.0/jquery.min.js" type="text/javascript"></script>
+    <link rel="stylesheet" type="text/css" href="users.css">
     <script src="userTasks.js"></script>
 </head>
 
 <body>
-    <input type="button" value="Go back to users list" onClick="javascript:document.location.href='http://localhost/manager.one/front/users.html'" />
+    <input class="button" type="button" value="Go back to users list"
+        onClick="javascript:document.location.href='http://localhost/manager.one/front/users.html'" />
     <div id="tasks">
     </div>
     <div>
@@ -19,15 +21,16 @@
             <label for="title">Title : </label>
             <input type="text" id="title" name="title" value="Call Mama" required> <br>
             <label for="description">Description : </label>
-            <input type="text" id="description" name="description" value="Call mama to ask if she went to the pharmacy" required> <br>
+            <input type="text" id="description" name="description" value="Call mama to ask if she went to the pharmacy"
+                required> <br>
             <label for="creation_date">Creation date : </label>
             <input type="date" id="creation_date" name="creation_date" value="2019-12-21" required> <br>
             <label for="title">Status : </label>
-            <SELECT id="status" name="status" required> 
+            <SELECT id="status" name="status" required>
                 <OPTION Value="TODO" SELECTED>TODO</OPTION>
-                <OPTION Value="DONE">DONE</OPTION>  
+                <OPTION Value="DONE">DONE</OPTION>
             </SELECT> <br>
-            <input type="submit" value="Create" required>
-          </form>
+            <input class="button" type="submit" value="Create" required>
+        </form>
     </div>
 </body>
