--- a/front/users.html
+++ b/front/users.html
@@ -12,15 +12,17 @@
 </head>
 
 <body>
-    <div id="users">
-    </div>
     <div>
-        <form action="#" id="createUserForm" onsubmit="createUser(); return false">
-            <label for="name">Name : </label>
-            <input type="text" id="name" name="name" value="Louis" required>
-            <label for="email">Email : </label>
-            <input type="text" id="email" name="email" value="louis.fontaine@efrei.net" required>
-            <input class="button" type="submit" value="Create" required>
-        </form>
+        <div id="users">
+        </div>
+        <div>
+            <form action="#" id="createUserForm" onsubmit="createUser(); return false">
+                <label for="name">Name : </label>
+                <input type="text" id="name" name="name" value="Louis" required>
+                <label for="email">Email : </label>
+                <input type="text" id="email" name="email" value="louis.fontaine@efrei.net" required>
+                <input class="button" type="submit" value="Create" required>
+            </form>
+        </div>
     </div>
 </body>
