--- a/front/HTML/userTasks.html
+++ b/front/HTML/userTasks.html
@@ -7,13 +7,13 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>User Tasks</title>
     <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.11.0/jquery.min.js" type="text/javascript"></script>
-    <link rel="stylesheet" type="text/css" href="users.css">
-    <script src="userTasks.js"></script>
+    <link rel="stylesheet" type="text/css" href="../CSS/users.css">
+    <script src="../JS/userTasks.js"></script>
 </head>
 
 <body>
     <input class="button" type="button" value="Go back to users list"
-        onClick="javascript:document.location.href='http://localhost/manager.one/front/users.html'" />
+        onClick="javascript:document.location.href='http://localhost/manager.one/front/HTML/users.html'" />
     <div id="tasks">
     </div>
     <div>
