--- a/front/HTML/users.html
+++ b/front/HTML/users.html
@@ -6,9 +6,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Users</title>
-    <link rel="stylesheet" type="text/css" href="users.css">
+    <link rel="stylesheet" type="text/css" href="../CSS/users.css">
     <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.11.0/jquery.min.js" type="text/javascript"></script>
-    <script src="users.js"></script>
+    <script src="../JS/users.js"></script>
 </head>
 
 <body>
